--- a/text-diagram/style.css
+++ b/text-diagram/style.css
@@ -66,6 +66,14 @@
     -webkit-border-radius:10px;
     -moz-border-radius:10px;
     border-radius:10px;
+
+    background-color: black;
+    color: white;
+}
+
+.body {
+    background-color: black;
+    color: white;
 }
 
 #btn_div {
